force-app/main/default/objects/BLND_DFDT_Task__c/BLND_DFDT_Task__c.object-meta.xml
<CustomObject>
    <label>DreamTeam Task</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DreamTeam Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>