force-app/main/default/objects/BLND_DFDT_Task__c/fields/BLND_Constraint_Type__c.field-meta.xml
<CustomField>
    <fullName>BLND_Constraint_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Constraint Type</label>
    <length>160</length>
    <type>Text</type>
</CustomField>