force-app/main/default/objects/BLND_DFDT_Task__c/fields/BLND_DreamFactory__c.field-meta.xml
<CustomField>
    <fullName>BLND_DreamFactory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DreamFactory</label>
    <type>Url</type>
</CustomField>